@@ -1,4 +1,5 @@
 0.10
+ - Add missing requires.
 
 0.09 2024-06-25T08:35:41+02:00
  - Add another publishing places cleanup (Ve Praze, We Praze). Thanks Josef
